--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
-Kirimi Makena Faith<makenafaith12@gmail.com>
-Teddy Omondi<theoriginalsomosh@gmail.com>
+Mina Tamunowari<wittyambivert@gmail.com>
+Michael David<micaheldavid@gmail.com>
